# apple-archive-rust

./: .gitattributes  .gitmodules  Cargo.toml  LICENSE  README.md
.dev/llm-threads/: pi-session-2026-07-02T06-27-36-849Z_019f2182-ef11-7b01-b17a-21d7b85a036a.html  pi-session-2026-07-02T07-35-16-886Z_019f21c0-e296-740f-ba41-cadd3f72a155.html  pi-session-2026-07-02T07-45-04-511Z_019f21c9-d9ff-740f-a6e4-e19e5c71a825.html  pi-session-2026-07-02T10-03-31-306Z_019f2248-9a6a-70d8-b5b8-d68704c060b0.html  pi-session-2026-07-02T21-56-55-166Z_019f24d5-bcfe-7368-91d9-afe662f93d91.html  pi-session-2026-07-02T22-09-35-346Z_019f24e1-5672-71a0-ad95-9f8a1ebb97db.html  pi-session-2026-07-10T14-13-15-084Z_019f4c60-1ccc-7e8b-83e1-8e0fc0503f1a.html  pi-session-2026-07-10T14-29-44-486Z_019f4c6f-35a6-710f-9fd0-4158449a7e40.html  pi-session-2026-07-10T14-38-46-401Z_019f4c77-7a81-7208-be3c-9b04fdb0400f.html
.github/workflows/: publish.yml
src/: archive.rs  compression.rs  error.rs  field.rs  fs.rs  header.rs  lib.rs  read_array.rs
tests/: fs_roundtrip.rs  roundtrip.rs
